# transcrobes-orig

./: .coveragerc  .dockerignore  .env.asgi  .env.export  .env.wsgi  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .tool-versions  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.example  README.md  adduser.sh  bc.webpack.config.js  bcd.webpack.config.js  bcp.webpack.config.js  docker-compose.yml  docker-compose.yml.example  import_hook.py  load_data.sh  media.webpack.config.js  package-lock.json  package.json  pyproject.toml  readium.webpack.config.js  requirements-latest.txt  requirements.ci.txt  requirements.dev.txt  requirements.txt  runcoverage.sh  rundevserver.sh  runlint.sh  runmanage.sh  runserver.sh  runsetup.sh  runtests.sh  set_python_path.sh  webpack.config.dev.js  (+1 more)
dockerfiles/: Dockerfile.corenlp  Dockerfile.tc_pyaudio  Dockerfile.tc_tc
docs/extras/: abc_pos.txt  pos.txt
fixtures/: surveys.json
images/main/: Dockerfile
images/static/: Dockerfile  location.conf
scripts/: buildext.sh  buildimages.sh  load_data.sh  runcoverage.sh  rundevserver.sh  rundevserver_asgi.sh  rundevserver_wsgi.sh  rundockerdev.sh  runlint.sh  runmanage.sh  runserver.sh  runsetup.sh  runtests.sh  rununittests.sh
src/: manage.py  ndutils.py  requirements.ci.txt  requirements.txt  stats.py  utils.py
src/accounts/: urls.py
src/ankrobes/: __init__.py  apps.py  models.py  signals.py  urls.py  views.py
src/ankrobes/migrations/: 0001_initial.py  0002_auto_20201125_0427.py
src/assets/: notrobes.app.jsx  survey.app.jsx  survey_rest.js
src/assets/bc/: manifest.json  options.html
src/assets/components/: CharacterGraph.jsx  DefinitionGraph.jsx  PracticerInput.jsx  SearchLoading.jsx  Word.jsx  (+14 more)
src/data/: __init__.py  admin.py  apps.py  asgi.py  context.py  forms.py  models.py  permissions.py  schema.py  serialisers.py  signals.py  urls.py  utils.py  validators.py  views.py
src/en_zhhans/: apps.py  models.py
src/enrich/: __init__.py  apps.py  cache.py  models.py  urls.py  views.py
src/enrichers/: apps.py
src/templates/: 404.html  base.html  home.html
src/transcrobes/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
src/zhhans_en/: apps.py  models.py
tests/: __init__.py  test_ankrobes.py  test_enrich.py  test_transcrobes.py  test_zhhans_en.py  test_zhhans_enrichers.py
tests/cassettes/: AuthTests.test_basic_authentication.yaml  AuthTests.test_jwt_authentication.yaml  AuthTests.test_session_authentication.yaml  BingTranslatorTests.test_get_standardised_defs.yaml  BingTranslatorTests.test_get_standardised_fallback_defs.yaml  BingTranslatorTests.test_transliterate.yaml  CoreNLP_ZHHANS_EnricherTest.test__add_transliterations.yaml  CoreNLP_ZHHANS_EnricherTests.test__add_transliterations.yaml  FullEnrichTest.test_enrich_to_json.yaml  HTTPCoreNLPProviderTests.test_parse.yaml
tests/fixtures/: surveys.yaml  users.yaml
transcrobes/: ankrobes.py  manage.py  utils.py
transcrobes/accounts/: views.py
transcrobes/ankrobes/: __init__.py  apps.py  dum.py  models.py  msyncurls.py  pgankisyncd.py  syncurls.py  tests.py  urls.py  views.py
transcrobes/data/: admin.py  models.py  utils.py  views.py
transcrobes/enrich/: __init__.py  apps.py  enricher.py  models.py  tests.py  urls.py  views.py
transcrobes/lang/: __init__.py  abc_pos.txt
transcrobes/notes/: ankrobes.py  apps.py  urls.py  views.py
transcrobes/transcrobes/: settings.py  tests.py  urls.py  views.py  wsgi.py
(+703 files in other folders)
